res dataset undersampling and oversampling

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "4  00038504-c286-4c49-a6ed-d7853f65f7d6  2019    18                2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1554,8 +1554,6 @@
        "      <th>numEventsMonth</th>\n",
        "      <th>purchaseMonth</th>\n",
        "      <th>contactMonth</th>\n",
-       "      <th>numEventsLast7D_x</th>\n",
-       "      <th>numEventsLast7D_y</th>\n",
        "      <th>numEventsLast7D</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1576,8 +1574,6 @@
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1594,8 +1590,6 @@
        "      <td>2</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1614,8 +1608,6 @@
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1633,8 +1625,6 @@
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1651,8 +1641,6 @@
        "      <td>4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1674,22 +1662,15 @@
        "3      4  2019    16       7.0            1            3               4   \n",
        "4      4  2019    18      11.0            1            4               4   \n",
        "\n",
-       "   purchaseMonth  contactMonth  numEventsLast7D_x  numEventsLast7D_y  \\\n",
-       "0            2.0           0.0                  1                  1   \n",
-       "1            2.0           0.0                  1                  1   \n",
-       "2            1.0           3.0                  1                  1   \n",
-       "3            1.0           3.0                  1                  1   \n",
-       "4            1.0           3.0                  2                  2   \n",
-       "\n",
-       "   numEventsLast7D  \n",
-       "0                1  \n",
-       "1                1  \n",
-       "2                1  \n",
-       "3                1  \n",
-       "4                2  "
+       "   purchaseMonth  contactMonth  numEventsLast7D  \n",
+       "0            2.0           0.0                1  \n",
+       "1            2.0           0.0                1  \n",
+       "2            1.0           3.0                1  \n",
+       "3            1.0           3.0                1  \n",
+       "4            1.0           3.0                2  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,19 +1678,6 @@
    "source": [
     "df = pd.merge(df,eventsLast7D,how='left',on=['uuid','year','week'])\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count events last 7 days\n",
-    "delta = 7\n",
-    "df['count_in_last_%s_days' %(delta)] = df.assign(count=1).groupby(\n",
-    "    ['ID']).apply(lambda x: x.rolling('%sD' %delta, on='Date').sum(\n",
-    "        ))['count'].astype(int) - 1"
    ]
   },
   {
@@ -1721,17 +1689,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calling the last date of each user as \"last\"\n",
+    "# classifying the other dates before the last as 0\n",
     "indexLastDate = df.groupby('uuid', as_index=False).nth(-1).index\n",
     "df['churn'] = ['last' if x in indexLastDate else 0 for x in df.index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1744,15 +1714,16 @@
     "    diffDaysLast = abs(dayCalcChurn - df.date[i]).days\n",
     "    daysLastEvent.append(diffDaysLast)\n",
     "\n",
-    "df['days_last_event'] = daysLastEvent\n"
+    "df['days_last_event'] = daysLastEvent \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# classifyng churn (1's) on ds\n",
     "cutOffDate = 90\n",
     "cond1 = df.churn == 'last'\n",
     "cond2 = df.days_last_event > cutOffDate\n",
@@ -1761,26 +1732,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       103069\n",
+       "last       719\n",
+       "1          315\n",
+       "Name: churn, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.churn.value_counts()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.figure(figsize=(20,4))\n",
-    "ax = sns.boxplot(data=df,x=\"days_last_event\",palette=\"flare\")\n",
-    "sns.set(style=\"whitegrid\")\n",
-    "plt.xlabel('Days Since Last Event')\n",
-    "plt.ylabel('Count')\n",
-    "plt.title('Days Since Last Event')\n",
-    "plt.show()"
+    "In this scenario, we have 103069 not churn events, 315 churn events and 719 events that we don't know how to classify yet."
    ]
   },
   {
@@ -1792,9 +1769,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Train + Valid dataset: (103384, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "# the known values will be used for train and valid dataset\n",
     "trainValid = df.loc[df.churn != 'last']\n",
@@ -1805,9 +1790,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X Train dataset:  (72368, 6)\n",
+      "Shape of y Train dataset:  (72368,)\n",
+      "Shape of X Valid dataset:  (31016, 6)\n",
+      "Shape of y Valid dataset:  (31016,)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(trainValid.drop(columns=['churn']),trainValid['churn'], test_size=0.3,random_state=42)\n",
@@ -1826,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,9 +1832,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X Train dataset:  (675, 6)\n",
+      "Shape of y Train dataset:  (675,)\n",
+      "Shape of X Valid dataset:  (270, 6)\n",
+      "Shape of y Valid dataset:  (270,)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_res, y_train_res = rus.fit_resample(X_train, y_train.astype('int'))\n",
     "X_valid_res, y_valid_res = rus.fit_resample(X_valid, y_valid.astype('int'))\n",
@@ -1857,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1867,9 +1874,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X Train dataset:  (900, 6)\n",
+      "Shape of y Train dataset:  (900,)\n",
+      "Shape of X Valid dataset:  (360, 6)\n",
+      "Shape of y Valid dataset:  (360,)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_res, y_train_res = sm.fit_resample(X_train_res, y_train_res.astype('int'))\n",
     "X_valid_res, y_valid_res = sm.fit_resample(X_valid_res, y_valid_res.astype('int'))\n",
@@ -1881,9 +1899,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Test dataset: (719, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "# test dataset will alocate the unknown values that will be used for prediction\n",
     "test = df.loc[df.churn == 'last']\n",
@@ -1893,19 +1919,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB"
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score, precision_score,recall_score, f1_score\n",
+    "import scikitplot as skplt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,14 +1949,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>0.913043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Random_Forest</td>\n",
+       "      <td>0.906250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision_Tree</td>\n",
+       "      <td>0.904762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nearest_Neighbors</td>\n",
+       "      <td>0.901554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Naive_Bayes</td>\n",
+       "      <td>0.888325</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                name     score\n",
+       "3           AdaBoost  0.913043\n",
+       "2      Random_Forest  0.906250\n",
+       "1      Decision_Tree  0.904762\n",
+       "0  Nearest_Neighbors  0.901554\n",
+       "4        Naive_Bayes  0.888325"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scores = []\n",
     "for name, clf in zip(names, classifiers):\n",
     "    clf.fit(X_train_res, y_train_res.astype('int'))\n",
-    "    score = clf.score(X_valid, y_valid.astype('int'))\n",
+    "    prediction = clf.predict(X_valid_res)\n",
+    "    score = precision_score(y_valid_res.astype('int'),prediction )\n",
     "    scores.append(score)\n",
     "\n",
     "models = pd.DataFrame()\n",
@@ -1939,16 +2037,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = AdaBoostClassifier(n_estimators=100)"
+    "best_model = AdaBoostClassifier(n_estimators=100)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adc.fit(X_ncr[feat_select], y_ncr)\n",
+    "preds_valid = adc.predict(X_valid[feat_select])\n",
+    "skplt.metrics.plot_confusion_matrix(y_valid, preds_valid)\n",
+    "plt.title('Confusion Matrix - Neighbourhood Cleaning Rule')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model.fit(X_train_res, y_train_res.astype('int'))\n",
+    "prediction = best_model.predict(X_valid)\n",
+    "skplt.metrics.plot_confusion_matrix(y_valid,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,16 +2080,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "719"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(churnPredict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1977,9 +2110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    103622\n",
+       "1       481\n",
+       "Name: churn, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.churn.value_counts()"
    ]
