--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1918,8 +1918,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1949,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1993,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Random_Forest</td>\n",
-       "      <td>0.906250</td>\n",
+       "      <td>0.905759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2010,13 +2017,13 @@
       "text/plain": [
        "                name     score\n",
        "3           AdaBoost  0.913043\n",
-       "2      Random_Forest  0.906250\n",
+       "2      Random_Forest  0.905759\n",
        "1      Decision_Tree  0.904762\n",
        "0  Nearest_Neighbors  0.901554\n",
        "4        Naive_Bayes  0.888325"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
