--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Customer Survival - Churn Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "> Churn rate is an essential metric to provides clarity on how well the business is retaining customers. An explicit customer churn represents the rate at which your customers are cancelling their subscriptions. On the other hand, the most common situation in retail selling is an implicit churn. This happens when the churner simply stops using the platform/business. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "> The purpose of this notebook is trying to predict users who will churn by checking previous historical data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LIBS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +43,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DATASET"
    ]
   },
   {
