--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LIBS"
+    "## Libs"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DATASET"
+    "## Dataset"
    ]
   },
   {
