--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1549,7 +1549,7 @@
     }
    ],
    "source": [
-    "# count number of events by last 7 days\n",
+    "# count number of events on the last 7 days\n",
     "eventsLast7D = df.groupby(['uuid','year','week']).size().reset_index(name='numEventsLast7D')\n",
     "eventsLast7D.head()"
    ]
